--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="sidebar">
+
+        </div>
+        <div class="header">
+
+        </div>
+        <div class="content">
+            
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
