Block out header and sidebar layouts

--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
 <body>
     <div class="main-container">
         <div class="sidebar">
-
+            <div class="logo"><img src="img/icons/home.svg"/>Dashboard</div>
+            <ul class="action-group-1">
+                <li class=""><img src="img/icons/home.svg"/>Home</li>
+                <li class=""><img src="img/icons/home.svg"/>Profile</li>
+                <li class=""><img src="img/icons/home.svg"/>Communities</li>
+                <li class=""><img src="img/icons/home.svg"/>Messages</li>
+                <li class=""><img src="img/icons/home.svg"/>History</li>
+                <li class=""><img src="img/icons/home.svg"/>Tasks</li>
+            </ul>
+            <ul class="action-group-2">
+                <li><img src="img/icons/home.svg"/>Settings</li>
+                <li><img src="img/icons/home.svg"/>Support</li>
+                <li><img src="img/icons/home.svg"/>Privacy</li>
+            </ul>
         </div>
         <div class="header">
-
+            <div class="search"></div>
+            <div class="user-small"></div>
+            <div class="user-big"></div>
+            <div class="buttons"></div>
         </div>
         <div class="content">
-            
+            <div class="projects"></div>
+            <div class="announcements"></div>
+            <div class="trending"></div>
         </div>
     </div>
     <script src="script.js"></script>
