Add missing item in sidebar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li class=""><img src="img/icons/home.svg"/>Messages</li>
                 <li class=""><img src="img/icons/home.svg"/>History</li>
                 <li class=""><img src="img/icons/home.svg"/>Tasks</li>
+                <li class=""><img src="img/icons/home.svg"/>Communities</li>
             </ul>
             <ul class="action-group-2">
                 <li><img src="img/icons/home.svg"/>Settings</li>
