Layout content section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,32 @@
             <div class="buttons"></div>
         </div>
         <div class="content">
-            <div class="projects"></div>
-            <div class="announcements"></div>
-            <div class="trending"></div>
+            <div class="projects">
+                <div class="content-header">Your Projects</div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="announcements">
+                <div class="content-header">Announcements</div>
+                <div>
+                    <div>Announce 1</div>
+                    <div>Announce 2</div>
+                    <div>Announce 3</div>
+                </div>
+            </div>
+            <div class="trending">
+                <div class="content-header">Trending</div>
+                <div>
+                    <div>Project 1</div>
+                    <div>Project 2</div>
+                    <div>Project 3</div>
+                    <div>Project 4</div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
