Add card layout

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
         <div class="content">
             <div class="projects">
                 <div class="content-header">Your Projects</div>
-                <div class="card"></div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <div>Lorem ipsum stuff</div>
+                    <div class="card-buttons">
+                        <button>Icon1</button>
+                        <button>Icon2</button>
+                        <button>Icon3</button>
+                    </div>
+                </div>
                 <div class="card"></div>
                 <div class="card"></div>
                 <div class="card"></div>
