Style containers for announcements and trending

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="card"></div>
                 <div class="card"></div>
             </div>
-            <div class="announcements">
+            <div class="announcements-section">
                 <div class="content-header">Announcements</div>
-                <div>
+                <div class="announcements-container">
                     <div>Announce 1</div>
                     <div>Announce 2</div>
                     <div>Announce 3</div>
@@ -59,7 +59,7 @@
             </div>
             <div class="trending">
                 <div class="content-header">Trending</div>
-                <div>
+                <div class="trending-container">
                     <div>Project 1</div>
                     <div>Project 2</div>
                     <div>Project 3</div>
