Change card buttons to image inputs

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     <div>Super Cool Project</div>
                     <div>Lorem ipsum stuff</div>
                     <div class="card-buttons">
-                        <button>Icon1</button>
-                        <button>Icon2</button>
-                        <button>Icon3</button>
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
                     </div>
                 </div>
                 <div class="card"></div>
