Add buttons to header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <div class="search"></div>
             <div class="user-small"></div>
             <div class="user-big"></div>
-            <div class="buttons"></div>
+            <div class="header-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="content">
             <div class="projects">
