--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             </ul>
         </div>
         <div class="header">
-            <div class="search"></div>
+            <div class="search">
+                <img src="img/icons/home.svg">
+                <input type="search">
+            </div>
             <div class="user-small"></div>
             <div class="user-big"></div>
             <div class="header-buttons">
