Add placeholder content to annoucements and style it

--- a/index.html
+++ b/index.html
@@ -59,9 +59,18 @@
             <div class="announcements-section">
                 <div class="content-header">Announcements</div>
                 <div class="announcements-container">
-                    <div>Announce 1</div>
-                    <div>Announce 2</div>
-                    <div>Announce 3</div>
+                    <div>
+                        <div>Announcement Title</div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quae ipsa nihil alias iusto sunt.</div>
+                    </div>
+                    <div>
+                        <div>Announcement Title</div>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt in magnam provident est obcaecati recusandae animi omnis tempora, ducimus nobis beatae natus quia necessitatibus iure quo laudantium.</div>
+                    </div>
+                    <div>
+                        <div>Announcement Title</div>
+                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis voluptatem inventore incidunt atque quidem possimus facilis ut cum corrupti hic fugit nam quae sunt, id veniam.</div>
+                    </div>
                 </div>
             </div>
             <div class="trending">
