Layout big user header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                 <input type="search">
             </div>
             <div class="user-small"></div>
-            <div class="user-big"></div>
+            <div class="user-big">
+                <img src="img/icons/home.svg">
+                <div>Hi there,</div>
+                <div>Morgan Oakley (@morgan)</div>
+            </div>
             <div class="header-buttons">
                 <button>New</button>
                 <button>Upload</button>
