Layout small user header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 <img src="img/icons/home.svg">
                 <input type="search">
             </div>
-            <div class="user-small"></div>
+            <div class="user-small">
+                <img src="img/icons/home.svg">
+                <img src="img/icons/home.svg">
+                <div>Morgan Oakley</div>
+            </div>
             <div class="user-big">
                 <img src="img/icons/home.svg">
                 <div>Hi there,</div>
