--- a/index.html
+++ b/index.html
@@ -51,18 +51,58 @@
                 <div class="content-header">Your Projects</div>
                 <div class="card">
                     <div>Super Cool Project</div>
-                    <div>Lorem ipsum stuff</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quod sint, hic incidunt aliquam non! Iusto aut et unde asperiores tempore, illum laboriosam cupiditate ea in, ut perferendis similique reprehenderit.</div>
                     <div class="card-buttons">
                         <input type="image" src="img/icons/home.svg">
                         <input type="image" src="img/icons/home.svg">
                         <input type="image" src="img/icons/home.svg">
                     </div>
                 </div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <div>Less Cool Project</div>
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa quas, commodi, debitis ipsum dolores repudiandae ad cupiditate sed aspernatur voluptatum officiis, harum aliquam quisquam autem atque reprehenderit sapiente reiciendis tenetur.</div>
+                    <div class="card-buttons">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Impossible App</div>
+                    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sint explicabo distinctio, eveniet voluptate similique sequi beatae commodi facilis eum eius, ipsam excepturi rem esse accusantium expedita at! Dolor, laboriosam!</div>
+                    <div class="card-buttons">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Easy Peasy App</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, modi? Minima blanditiis, fugiat voluptate quis reprehenderit sunt sequi autem, sint doloremque vel recusandae voluptatem, debitis non! Eos quaerat dolorem facilis.</div>
+                    <div class="card-buttons">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Ad Blocker</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque pariatur esse labore ex consequatur earum accusamus impedit accusantium, possimus quam perspiciatis autem dolores tenetur reprehenderit voluptatem exercitationem rerum officia reiciendis?</div>
+                    <div class="card-buttons">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Money Maker</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, iusto sint quasi, nostrum nam similique, rerum provident laborum doloribus fugit quo voluptatem minus obcaecati quaerat officiis nemo fuga ipsum porro.</div>
+                    <div class="card-buttons">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/home.svg">
+                    </div>
+                </div>
             </div>
             <div class="announcements-section">
                 <div class="content-header">Announcements</div>
