Use appropriate icons in sidebar, cards, and header

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
             <div class="logo"><img src="img/icons/home.svg"/>Dashboard</div>
             <ul class="action-group-1">
                 <li class=""><img src="img/icons/home.svg"/>Home</li>
-                <li class=""><img src="img/icons/home.svg"/>Profile</li>
-                <li class=""><img src="img/icons/home.svg"/>Messages</li>
-                <li class=""><img src="img/icons/home.svg"/>History</li>
-                <li class=""><img src="img/icons/home.svg"/>Tasks</li>
-                <li class=""><img src="img/icons/home.svg"/>Communities</li>
+                <li class=""><img src="img/icons/card-account-details.svg"/>Profile</li>
+                <li class=""><img src="img/icons/message-reply.svg"/>Messages</li>
+                <li class=""><img src="img/icons/clock-time-three.svg"/>History</li>
+                <li class=""><img src="img/icons/note-multiple.svg"/>Tasks</li>
+                <li class=""><img src="img/icons/account-group.svg"/>Communities</li>
             </ul>
             <ul class="action-group-2">
-                <li><img src="img/icons/home.svg"/>Settings</li>
-                <li><img src="img/icons/home.svg"/>Support</li>
-                <li><img src="img/icons/home.svg"/>Privacy</li>
+                <li><img src="img/icons/cog.svg">Settings</li>
+                <li><img src="img/icons/help-box.svg"/>Support</li>
+                <li><img src="img/icons/shield-check.svg"/>Privacy</li>
             </ul>
         </div>
         <div class="header">
             <div class="search">
-                <img src="img/icons/home.svg">
+                <img src="img/icons/magnify.svg">
                 <input type="search">
             </div>
             <div class="user-small">
-                <img src="img/icons/home.svg">
+                <img src="img/icons/bell-ring-outline.svg">
                 <img src="img/icons/home.svg">
                 <div>Morgan Oakley</div>
             </div>
@@ -53,54 +53,54 @@
                     <div>Super Cool Project</div>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quod sint, hic incidunt aliquam non! Iusto aut et unde asperiores tempore, illum laboriosam cupiditate ea in, ut perferendis similique reprehenderit.</div>
                     <div class="card-buttons">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/star-plus-outline.svg">
+                        <input type="image" src="img/icons/eye-plus-outline.svg">
+                        <input type="image" src="img/icons/source-fork.svg">
                     </div>
                 </div>
                 <div class="card">
                     <div>Less Cool Project</div>
                     <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa quas, commodi, debitis ipsum dolores repudiandae ad cupiditate sed aspernatur voluptatum officiis, harum aliquam quisquam autem atque reprehenderit sapiente reiciendis tenetur.</div>
                     <div class="card-buttons">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/star-plus-outline.svg">
+                        <input type="image" src="img/icons/eye-plus-outline.svg">
+                        <input type="image" src="img/icons/source-fork.svg">
                     </div>
                 </div>
                 <div class="card">
                     <div>Impossible App</div>
                     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sint explicabo distinctio, eveniet voluptate similique sequi beatae commodi facilis eum eius, ipsam excepturi rem esse accusantium expedita at! Dolor, laboriosam!</div>
                     <div class="card-buttons">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/star-plus-outline.svg">
+                        <input type="image" src="img/icons/eye-plus-outline.svg">
+                        <input type="image" src="img/icons/source-fork.svg">
                     </div>
                 </div>
                 <div class="card">
                     <div>Easy Peasy App</div>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, modi? Minima blanditiis, fugiat voluptate quis reprehenderit sunt sequi autem, sint doloremque vel recusandae voluptatem, debitis non! Eos quaerat dolorem facilis.</div>
                     <div class="card-buttons">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/star-plus-outline.svg">
+                        <input type="image" src="img/icons/eye-plus-outline.svg">
+                        <input type="image" src="img/icons/source-fork.svg">
                     </div>
                 </div>
                 <div class="card">
                     <div>Ad Blocker</div>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque pariatur esse labore ex consequatur earum accusamus impedit accusantium, possimus quam perspiciatis autem dolores tenetur reprehenderit voluptatem exercitationem rerum officia reiciendis?</div>
                     <div class="card-buttons">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/star-plus-outline.svg">
+                        <input type="image" src="img/icons/eye-plus-outline.svg">
+                        <input type="image" src="img/icons/source-fork.svg">
                     </div>
                 </div>
                 <div class="card">
                     <div>Money Maker</div>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, iusto sint quasi, nostrum nam similique, rerum provident laborum doloribus fugit quo voluptatem minus obcaecati quaerat officiis nemo fuga ipsum porro.</div>
                     <div class="card-buttons">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
-                        <input type="image" src="img/icons/home.svg">
+                        <input type="image" src="img/icons/star-plus-outline.svg">
+                        <input type="image" src="img/icons/eye-plus-outline.svg">
+                        <input type="image" src="img/icons/source-fork.svg">
                     </div>
                 </div>
             </div>
