Layout trending projects container

--- a/index.html
+++ b/index.html
@@ -124,10 +124,26 @@
             <div class="trending">
                 <div class="content-header">Trending</div>
                 <div class="trending-container">
-                    <div>Project 1</div>
-                    <div>Project 2</div>
-                    <div>Project 3</div>
-                    <div>Project 4</div>
+                    <div>
+                        <img src="img/icons/bell-ring-outline.svg">
+                        <div>@tegan</div>
+                        <div>World Peace Builder</div>
+                    </div>
+                    <div>
+                        <img src="img/icons/bell-ring-outline.svg">
+                        <div>@tegan</div>
+                        <div>World Peace Builder</div>
+                    </div>
+                    <div>
+                        <img src="img/icons/bell-ring-outline.svg">
+                        <div>@tegan</div>
+                        <div>World Peace Builder</div>
+                    </div>
+                    <div>
+                        <img src="img/icons/bell-ring-outline.svg">
+                        <div>@tegan</div>
+                        <div>World Peace Builder</div>
+                    </div>
                 </div>
             </div>
         </div>
