Convert sidebar entries to buttons

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <div class="sidebar">
             <div class="logo"><img src="img/icons/home.svg"/>Dashboard</div>
             <ul class="action-group-1">
-                <li class=""><img src="img/icons/home.svg"/>Home</li>
-                <li class=""><img src="img/icons/card-account-details.svg"/>Profile</li>
-                <li class=""><img src="img/icons/message-reply.svg"/>Messages</li>
-                <li class=""><img src="img/icons/clock-time-three.svg"/>History</li>
-                <li class=""><img src="img/icons/note-multiple.svg"/>Tasks</li>
-                <li class=""><img src="img/icons/account-group.svg"/>Communities</li>
+                <li class=""><button><img src="img/icons/home.svg"/>Home</button></li>
+                <li class=""><button><img src="img/icons/card-account-details.svg"/>Profile</button></li>
+                <li class=""><button><img src="img/icons/message-reply.svg"/>Messages</button></li>
+                <li class=""><button><img src="img/icons/clock-time-three.svg"/>History</button></li>
+                <li class=""><button><img src="img/icons/note-multiple.svg"/>Tasks</button></li>
+                <li class=""><button><img src="img/icons/account-group.svg"/>Communities</button></li>
             </ul>
             <ul class="action-group-2">
-                <li><img src="img/icons/cog.svg">Settings</li>
-                <li><img src="img/icons/help-box.svg"/>Support</li>
-                <li><img src="img/icons/shield-check.svg"/>Privacy</li>
+                <li><button><img src="img/icons/cog.svg">Settings</button></li>
+                <li><button><img src="img/icons/help-box.svg"/>Support</button></li>
+                <li><button><img src="img/icons/shield-check.svg"/>Privacy</button></li>
             </ul>
         </div>
         <div class="header">
