--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <div class="sidebar">
             <div class="logo"><img src="img/icons/home.svg"/>Dashboard</div>
             <ul class="action-group-1">
-                <li class=""><button><img src="img/icons/home.svg"/>Home</button></li>
-                <li class=""><button><img src="img/icons/card-account-details.svg"/>Profile</button></li>
-                <li class=""><button><img src="img/icons/message-reply.svg"/>Messages</button></li>
-                <li class=""><button><img src="img/icons/clock-time-three.svg"/>History</button></li>
-                <li class=""><button><img src="img/icons/note-multiple.svg"/>Tasks</button></li>
-                <li class=""><button><img src="img/icons/account-group.svg"/>Communities</button></li>
+                <li class=""><a href="index.html"><img src="img/icons/home.svg"/>Home</a></li>
+                <li class=""><a><img src="img/icons/card-account-details.svg"/>Profile</a></li>
+                <li class=""><a><img src="img/icons/message-reply.svg"/>Messages</a></li>
+                <li class=""><a><img src="img/icons/clock-time-three.svg"/>History</a></li>
+                <li class=""><a><img src="img/icons/note-multiple.svg"/>Tasks</a></li>
+                <li class=""><a><img src="img/icons/account-group.svg"/>Communities</a></li>
             </ul>
             <ul class="action-group-2">
-                <li><button><img src="img/icons/cog.svg">Settings</button></li>
-                <li><button><img src="img/icons/help-box.svg"/>Support</button></li>
-                <li><button><img src="img/icons/shield-check.svg"/>Privacy</button></li>
+                <li><a><img src="img/icons/cog.svg">Settings</a></li>
+                <li><a><img src="img/icons/help-box.svg"/>Support</a></li>
+                <li><a><img src="img/icons/shield-check.svg"/>Privacy</a></li>
             </ul>
         </div>
         <div class="header">
