--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
                 <div class="content-header">Announcements</div>
                 <div class="announcements-container">
                     <div>
-                        <div>Announcement Title</div>
+                        <div>Site Maintenance</div>
                         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quae ipsa nihil alias iusto sunt.</div>
                     </div>
                     <div>
-                        <div>Announcement Title</div>
+                        <div>Community Share Day</div>
                         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt in magnam provident est obcaecati recusandae animi omnis tempora, ducimus nobis beatae natus quia necessitatibus iure quo laudantium.</div>
                     </div>
                     <div>
-                        <div>Announcement Title</div>
+                        <div>Updated Privacy Policy</div>
                         <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis voluptatem inventore incidunt atque quidem possimus facilis ut cum corrupti hic fugit nam quae sunt, id veniam.</div>
                     </div>
                 </div>
@@ -131,18 +131,18 @@
                     </div>
                     <div>
                         <img src="img/icons/bell-ring-outline.svg">
-                        <div>@tegan</div>
-                        <div>World Peace Builder</div>
+                        <div>@morgan</div>
+                        <div>Super Cool Project</div>
                     </div>
                     <div>
                         <img src="img/icons/bell-ring-outline.svg">
-                        <div>@tegan</div>
-                        <div>World Peace Builder</div>
+                        <div>@kendall</div>
+                        <div>Life Changing App</div>
                     </div>
                     <div>
                         <img src="img/icons/bell-ring-outline.svg">
-                        <div>@tegan</div>
-                        <div>World Peace Builder</div>
+                        <div>@alex</div>
+                        <div>No Traffic Maker</div>
                     </div>
                 </div>
             </div>
