Add placeholder SVG user profile pictures

--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
             </div>
             <div class="user-small">
                 <img src="img/icons/bell-ring-outline.svg">
-                <img src="img/icons/home.svg">
+                <svg viewBox="0 0 50 50" fill="orange" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="25" cy="25" r="25" />
+                </svg>
                 <div>Morgan Oakley</div>
             </div>
             <div class="user-big">
-                <img src="img/icons/home.svg">
+                <svg viewBox="0 0 50 50" fill="orange" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="25" cy="25" r="25" />
+                </svg>
                 <div>Hi there,</div>
                 <div>Morgan Oakley (@morgan)</div>
             </div>
@@ -125,22 +129,30 @@
                 <div class="content-header">Trending</div>
                 <div class="trending-container">
                     <div>
-                        <img src="img/icons/bell-ring-outline.svg">
+                        <svg viewBox="0 0 50 50" fill="#aa6621" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="25" cy="25" r="25" />
+                        </svg>
                         <div>@tegan</div>
                         <div>World Peace Builder</div>
                     </div>
                     <div>
-                        <img src="img/icons/bell-ring-outline.svg">
+                        <svg viewBox="0 0 50 50" fill="lightblue" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="25" cy="25" r="25" />
+                        </svg>
                         <div>@morgan</div>
                         <div>Super Cool Project</div>
                     </div>
                     <div>
-                        <img src="img/icons/bell-ring-outline.svg">
+                        <svg viewBox="0 0 50 50" fill="purple" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="25" cy="25" r="25" />
+                        </svg>
                         <div>@kendall</div>
                         <div>Life Changing App</div>
                     </div>
                     <div>
-                        <img src="img/icons/bell-ring-outline.svg">
+                        <svg viewBox="0 0 50 50" fill="green" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="25" cy="25" r="25" />
+                        </svg>
                         <div>@alex</div>
                         <div>No Traffic Maker</div>
                     </div>
